--- a/src/app/components/clients/filter-bar/filter-left.scss
+++ b/src/app/components/clients/filter-bar/filter-left.scss
@@ -117,136 +117,136 @@
             }
         }
 
-        .filter-price {
-            .filter-price-content {
-                position: relative;
-                min-width: 12rem;
+        // .filter-price {
+        //     .filter-price-content {
+        //         position: relative;
+        //         min-width: 12rem;
 
-                .price-button {
-                    cursor: pointer;
-                    user-select: none;
-                    padding: 8px 12px;
-                    border: 1px solid var(--color-primary);
-                    border-radius: 4px;
-                    background-color: var(--color-light);
-                    display: flex;
-                    justify-content: flex-start;
-                    column-gap: .75rem;
-                    align-items: center;
-                    color: var(--color-primary);
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
+        //         .price-button {
+        //             cursor: pointer;
+        //             user-select: none;
+        //             padding: 8px 12px;
+        //             border: 1px solid var(--color-primary);
+        //             border-radius: 4px;
+        //             background-color: var(--color-light);
+        //             display: flex;
+        //             justify-content: flex-start;
+        //             column-gap: .75rem;
+        //             align-items: center;
+        //             color: var(--color-primary);
+        //             white-space: nowrap;
+        //             overflow: hidden;
+        //             text-overflow: ellipsis;
+        //         }
 
-                .price-bar {
-                    position: absolute;
-                    top: calc(100% + .3rem);
-                    left: 0%;
-                    min-width: 15rem;
-                    background-color: var(--color-bg-body);
-                    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-                    border-radius: .3rem;
-                    padding: .5rem 1.5rem;
-                    z-index: 1;
-                    display: none;
+        //         .price-bar {
+        //             position: absolute;
+        //             top: calc(100% + .3rem);
+        //             left: 0%;
+        //             min-width: 15rem;
+        //             background-color: var(--color-bg-body);
+        //             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        //             border-radius: .3rem;
+        //             padding: .5rem 1.5rem;
+        //             z-index: 1;
+        //             display: none;
 
-                    .price-title {
-                        text-align: center;
+        //             .price-title {
+        //                 text-align: center;
 
-                        h4 {
-                            margin-top: .5rem;
-                            font-size: 17px;
-                        }
-                    }
+        //                 h4 {
+        //                     margin-top: .5rem;
+        //                     font-size: 17px;
+        //                 }
+        //             }
 
-                    .price-form {
-                        margin-top: 1.5rem;
-                        width: 100%;
-                        display: flex;
-                        flex-direction: column;
+        //             .price-form {
+        //                 margin-top: 1.5rem;
+        //                 width: 100%;
+        //                 display: flex;
+        //                 flex-direction: column;
 
-                        .price-form-first {
-                            display: flex;
-                            column-gap: .5rem;
+        //                 .price-form-first {
+        //                     display: flex;
+        //                     column-gap: .5rem;
 
-                            .form-first {
-                                display: flex;
-                                justify-content: center;
-                                flex-direction: column;
-                                width: calc(50% - .25rem);
-                                position: relative;
+        //                     .form-first {
+        //                         display: flex;
+        //                         justify-content: center;
+        //                         flex-direction: column;
+        //                         width: calc(50% - .25rem);
+        //                         position: relative;
 
-                                .price-input {
-                                    width: 100%;
-                                    padding: 10px 1.25rem 10px 1.5rem;
-                                    outline: none;
-                                    border: 1px solid var(--color-primary);
-                                    color: var(--color-primary);
-                                    border-radius: .3rem;
-                                }
+        //                         .price-input {
+        //                             width: 100%;
+        //                             padding: 10px 1.25rem 10px 1.5rem;
+        //                             outline: none;
+        //                             border: 1px solid var(--color-primary);
+        //                             color: var(--color-primary);
+        //                             border-radius: .3rem;
+        //                         }
 
-                                // #clearPrice {
-                                //     position: absolute;
-                                //     top: 50%;
-                                //     transform: translateY(-50%);
-                                //     right: .3rem;
-                                //     cursor: pointer;
-                                //     border-radius: 50%;
-                                // }
+        //                         // #clearPrice {
+        //                         //     position: absolute;
+        //                         //     top: 50%;
+        //                         //     transform: translateY(-50%);
+        //                         //     right: .3rem;
+        //                         //     cursor: pointer;
+        //                         //     border-radius: 50%;
+        //                         // }
 
-                                // #clearPrice:hover {
-                                //     background-color: rgb(240, 240, 240);
-                                // }
+        //                         // #clearPrice:hover {
+        //                         //     background-color: rgb(240, 240, 240);
+        //                         // }
 
-                                .text-sub {
-                                    line-height: 2rem;
-                                    text-align: center;
-                                    font-size: 14px;
-                                }
-                            }
-                        }
+        //                         .text-sub {
+        //                             line-height: 2rem;
+        //                             text-align: center;
+        //                             font-size: 14px;
+        //                         }
+        //                     }
+        //                 }
 
-                        .text-message {
-                            font-size: 12px;
-                            color: rgb(225, 42, 42);
-                            text-align: right;
-                        }
+        //                 .text-message {
+        //                     font-size: 12px;
+        //                     color: rgb(225, 42, 42);
+        //                     text-align: right;
+        //                 }
 
-                        .price-form-second {
-                            display: flex;
-                            justify-content: flex-end;
-                            column-gap: .75rem;
-                            margin: .75rem 0;
+        //                 .price-form-second {
+        //                     display: flex;
+        //                     justify-content: flex-end;
+        //                     column-gap: .75rem;
+        //                     margin: .75rem 0;
 
-                            .apply-price {
-                                position: relative;
-                                padding: 0 6px;
-                                align-items: center;
-                                color: var(--color-primary);
-                                font-size: 16px;
-                                text-decoration: none;
-                            }
+        //                     .apply-price {
+        //                         position: relative;
+        //                         padding: 0 6px;
+        //                         align-items: center;
+        //                         color: var(--color-primary);
+        //                         font-size: 16px;
+        //                         text-decoration: none;
+        //                     }
 
-                            .apply-price::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 1.5px;
-                                background-color: var(--color-primary);
-                                bottom: -1px;
-                                left: 0;
-                            }
-                        }
+        //                     .apply-price::after {
+        //                         content: "";
+        //                         position: absolute;
+        //                         width: 100%;
+        //                         height: 1.5px;
+        //                         background-color: var(--color-primary);
+        //                         bottom: -1px;
+        //                         left: 0;
+        //                     }
+        //                 }
 
-                    }
-                }
+        //             }
+        //         }
 
-                .price-bar.show {
-                    display: block !important;
-                }
-            }
-        }
+        //         .price-bar.show {
+        //             display: block !important;
+        //         }
+        //     }
+        // }
 
         .filter-reset {
             display: flex;
@@ -264,6 +264,7 @@
                 border-radius: .3rem;
                 padding: 0 1.5rem;
                 background-color: var(--color-secondary);
+                text-wrap: nowrap;
             }
         }
 
