--- a/src/app/components/clients/register/register.component.html
+++ b/src/app/components/clients/register/register.component.html
@@ -1,1 +1,86 @@
-<p>register works!</p>
+<div class="register-wrapper">
+    <div class="register-container">
+        <div class="register-header">
+            <h3 class="register-title">
+                Đăng nhập
+            </h3>
+            <div class="brand">
+                <a routerLink="/home" class="brand-link">
+                    <img class="brand-image" src="./assets/images/logo2.png" alt="logo">
+                </a>
+            </div>
+        </div>
+        <div class="register-message">{{ registerMessage }}</div>
+        <div class="register-content">
+            <form (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="username">Email</label>
+                    <input type="text" id="username" name="username" required (input)="onChangeEmail($event)">
+                    <span *ngIf="invalidEmail" class="validate-message">Vui lòng nhập email hợp lệ.</span>
+                </div>
+                <div class="form-group">
+                    <label for="fullName">Họ tên</label>
+                    <input type="text" id="fullName" name="fullName" required (input)="onChangeFullName($event)">
+                    <span *ngIf="invalidFullName" class="validate-message">Vui lòng nhập họ tên.</span>
+                </div>
+                <div class="form-group">
+                    <label for="password">Mật khẩu</label>
+                    <div class="password-wrapper">
+                        <input [type]="isShowPassword ? 'text' : 'password'" id="password" name="password" required
+                            (input)="onChangePassword($event)">
+                        <a id="showPassword" [class.show]="isShowPassword" href="javascript:void(0)"
+                            (click)="togglePassword()">
+                            <i class='bx bx-show'></i>
+                        </a>
+                        <a id="hidePassword" [class.show]="!isShowPassword" href="javascript:void(0)"
+                            (click)="togglePassword()">
+                            <i class='bx bx-hide'></i>
+                        </a>
+                    </div>
+                    <span *ngIf="invalidPassword" class="validate-message">Mật khẩu phải có ít nhất 6 ký tự.</span>
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">Xác nhận mật khẩu</label>
+                    <div class="password-wrapper">
+                        <input [type]="isShowConfirmPassword ? 'text' : 'password'" name="password" required
+                            (input)="onChangeConfirmPassword($event)">
+                        <a id="showConfirmPassword" [class.show]="isShowConfirmPassword" href="javascript:void(0)"
+                            (click)="toggleConfirmPassword()">
+                            <i class='bx bx-show'></i>
+                        </a>
+                        <a id="hideConfirmPassword" [class.show]="!isShowConfirmPassword" href="javascript:void(0)"
+                            (click)="toggleConfirmPassword()">
+                            <i class='bx bx-hide'></i>
+                        </a>
+                    </div>
+                    <span *ngIf="invalidConfirmPassword" class="validate-message">Mật khẩu phải có ít nhất 6 ký tự và
+                        trùng mới mật khẩu ở trên.</span>
+                </div>
+                <button type="submit">Đăng ký</button>
+            </form>
+        </div>
+
+        <div class="wall-login">
+            <div class="line-left"></div>
+            <span>Hoặc đăng nhập bằng</span>
+            <div class="line-right"></div>
+        </div>
+
+        <div class="register-footer">
+            <div class="register-option">
+                <a class="register-option-icon" href="javascript:void(0)">
+                    <i class='bx bxl-google'></i>
+                </a>
+                <a class="register-option-icon" href="javascript:void(0)">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+                <a class="register-option-icon" href="javascript:void(0)">
+                    <i class='bx bxl-instagram-alt'></i>
+                </a>
+            </div>
+            <div class="sign-in">
+                <a routerLink="/auth/login">Bạn đã có tài khoản? Đăng nhập</a>
+            </div>
+        </div>
+    </div>
+</div>
