--- a/src/app/components/clients/shop/shop.component.scss
+++ b/src/app/components/clients/shop/shop.component.scss
@@ -38,151 +38,183 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 3.5rem;
 
-        .ppopular-content {
+        .ppopular-item {
             position: relative;
             max-height: 300px;
             border-radius: .3rem;
 
-            a {
-                color: var(--color-text-body)
-            }
+            .ppopular-link {
+                color: var(--color-text-body);
 
-            .pp-picture {
-                height: 100%;
-                display: flex;
-                column-gap: .2rem;
+                .ppopular-content {
+                    position: relative;
+                    height: 100%;
+                    width: 100%;
+                    border-radius: .3rem;
 
-                .picture-1 {
-                    flex: calc(60% - .1rem);
-                    border-right: 1px solid var(--color-light);
-
-                    img {
-                        width: 100%;
+                    .pp-picture {
                         height: 100%;
-                        object-fit: cover;
-                        border-top-left-radius: .3rem;
-                        border-bottom-left-radius: .3rem;
-
-                    }
-                }
-
-                .picture-right {
-                    flex: calc(40% - .1rem);
-                    display: flex;
-                    row-gap: .1rem;
-                    flex-direction: column;
-
-                    .picture-2,
-                    .picture-3 {
-                        // flex: 1;
-                        height: calc(100% - .1rem);
-
-                        img {
-                            height: calc(100% - .15rem);
-                            width: 100%;
-                            object-fit: cover;
-                        }
-                    }
-
-                    .picture-2 {
-                        height: 40%;
-
-                        img {
-                            border-top-right-radius: .3rem;
-                            border-bottom: 1px solid var(--color-light);
-
-                        }
-                    }
-
-                    .picture-3 {
-                        height: 60%;
-
-                        img {
-                            border-bottom-right-radius: .3rem;
-                        }
-                    }
-                }
-            }
-
-            .pp-info {
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                left: 0;
-                min-height: 4.5rem;
-                display: flex;
-                justify-content: space-between;
-                background-color: rgb(237, 237, 237);
-                border-bottom-left-radius: .3rem;
-                border-bottom-right-radius: .3rem;
-
-                .info-left {
-                    padding-left: 1rem;
-                    padding-top: 0.75rem;
-
-                    .info-title {
-                        flex: 0 0 100%;
-                        width: 100%;
-                        margin: 0 0 0.25rem;
-                        font-size: 20px;
-
-                    }
-
-                    .info-address {
-                        flex: 0 0 100%;
-                    }
-                }
-
-                .info-right {
-                    padding-top: 0.75rem;
-                    padding-right: 0.5rem;
-
-                    .info-price {
-                        width: 100%;
-                        font-size: 14px;
-                        text-align: right;
-                        margin: 0;
-                        margin-bottom: .75rem;
-                    }
-
-                    .info-rate {
                         display: flex;
-                        justify-content: flex-end;
+                        column-gap: .2rem;
 
-                        .rate-star {
-                            margin-right: 0.3rem;
+                        .picture-1 {
+                            flex: calc(60% - .1rem);
+                            border-right: 1px solid var(--color-light);
 
                             img {
-                                width: 12px;
+                                width: 100%;
+                                height: 100%;
                                 object-fit: cover;
+                                border-top-left-radius: .3rem;
+                                border-bottom-left-radius: .3rem;
+
                             }
                         }
 
-                        .rate-text {
-                            font-size: 14px;
-                            padding-top: 2px;
+                        .picture-right {
+                            flex: calc(40% - .1rem);
+                            display: flex;
+                            row-gap: .1rem;
+                            flex-direction: column;
+
+                            .picture-2,
+                            .picture-3 {
+                                // flex: 1;
+                                height: calc(100% - .1rem);
+
+                                img {
+                                    height: calc(100% - .15rem);
+                                    width: 100%;
+                                    object-fit: cover;
+                                }
+                            }
+
+                            .picture-2 {
+                                height: 40%;
+
+                                img {
+                                    border-top-right-radius: .3rem;
+                                    border-bottom: 1px solid var(--color-light);
+
+                                }
+                            }
+
+                            .picture-3 {
+                                height: 60%;
+
+                                img {
+                                    border-bottom-right-radius: .3rem;
+                                }
+                            }
+                        }
+                    }
+
+                    .pp-info {
+                        position: absolute;
+                        bottom: 0;
+                        right: 0;
+                        left: 0;
+                        min-height: 4.5rem;
+                        display: flex;
+                        justify-content: space-between;
+                        background-color: rgb(237, 237, 237);
+                        border-bottom-left-radius: .3rem;
+                        border-bottom-right-radius: .3rem;
+
+                        .info-left {
+                            padding-left: 1rem;
+                            padding-top: 0.75rem;
+
+                            .info-title {
+                                flex: 0 0 100%;
+                                width: 100%;
+                                margin: 0 0 0.25rem;
+                                font-size: 20px;
+
+                            }
+
+                            .info-address {
+                                flex: 0 0 100%;
+                            }
+                        }
+
+                        .info-right {
+                            padding-top: 0.75rem;
+                            padding-right: 0.5rem;
+
+                            .info-price {
+                                width: 100%;
+                                font-size: 14px;
+                                text-align: right;
+                                margin: 0;
+                                margin-bottom: .75rem;
+                            }
+
+                            .info-rate {
+                                display: flex;
+                                justify-content: flex-end;
+
+                                .rate-star {
+                                    margin-right: 0.3rem;
+
+                                    img {
+                                        width: 12px;
+                                        object-fit: cover;
+                                    }
+                                }
+
+                                .rate-text {
+                                    font-size: 14px;
+                                    padding-top: 2px;
+                                }
+                            }
+                        }
+                    }
+
+                    .pp-avatar {
+                        width: 3em;
+                        height: 3em;
+                        border-radius: 50%;
+                        position: absolute;
+                        bottom: 3.75rem;
+                        left: 1rem;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: 50%;
+
                         }
                     }
                 }
-            }
 
-            .pp-avatar {
-                width: 3em;
-                height: 3em;
-                border-radius: 50%;
-                position: absolute;
-                bottom: 3.75rem;
-                left: 1rem;
+                .ppopular-content:hover::before {
+                    content: "Xem hồ sơ";
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    top: 0;
+                    background-color: rgba(0, 0, 0, 0.7);
+                    color: var(--color-light);
+                    font-size: 20px;
+                    padding: 10px;
+                    transition: opacity 0.3s;
+                    opacity: 0;
+                    z-index: 1;
+                    border-radius: .3rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    border-radius: 50%;
-
+                .ppopular-content:hover::before {
+                    opacity: 1;
                 }
             }
         }
+
     }
 
     .ppopular-detail {
@@ -245,31 +277,35 @@
         margin-top: 1.5rem !important;
 
         .ppopular-wrapper {
-            .ppopular-content {
-                .pp-info {
-                    height: 7rem;
-                    justify-content: flex-start;
-                    flex-direction: column;
+            .ppopular-item {
+                .ppopular-link {
+                    .ppopular-content {
+                        .pp-info {
+                            height: 7rem;
+                            justify-content: flex-start;
+                            flex-direction: column;
 
-                    .info-right {
-                        display: flex;
-                        justify-content: flex-start;
-                        padding-left: 1rem;
+                            .info-right {
+                                display: flex;
+                                justify-content: flex-start;
+                                padding-left: 1rem;
 
-                        .info-price {
-                            text-align: left;
-                            width: auto;
-                            margin-right: 1.5rem;
+                                .info-price {
+                                    text-align: left;
+                                    width: auto;
+                                    margin-right: 1.5rem;
+                                }
+
+                                .info-rate {
+                                    justify-content: flex-start;
+                                }
+                            }
                         }
 
-                        .info-rate {
-                            justify-content: flex-start;
+                        .pp-avatar {
+                            bottom: 6.26rem;
                         }
                     }
-                }
-
-                .pp-avatar {
-                    bottom: 6.26rem;
                 }
             }
         }
