--- a/src/app/components/clients/layout-auth/layout-auth.component.scss
+++ b/src/app/components/clients/layout-auth/layout-auth.component.scss
@@ -1,14 +1,10 @@
 .layout-auth {
-    width: 100vw;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
 
-    .auth-wrapper {
-        width: 100%;
-        min-height: 100%;
-        background-image: url('/assets/images/banner.jpg');
-        background-size: cover;
-        background-repeat: repeat;
-        background-position: center;
-        position: relative;
-    }
+    // .auth-wrapper {
+    //     width: 100%;
+    //     height: 100%;
+    //     position: relative;
+    // }
 }
