--- a/src/app/components/clients/login/login.component.scss
+++ b/src/app/components/clients/login/login.component.scss
@@ -2,24 +2,45 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 700px;
+    width: 100%;
     min-height: 100vh;
-    max-height: 1100px;
-    padding: 0.5rem 0.2rem;
+    background-image: url('/assets/images/banner.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 2rem;
 
     .login-container {
         padding: 2rem;
         border-radius: .5rem;
-        width: 80%;
-        margin: 0 auto;
+        width: 700px;
+        margin: auto;
+        min-height: calc(100vh - 4rem);
         height: 100%;
-        background-color: rgba(255, 255, 255, 0.26);
+        background-color: rgba(255, 255, 255, 0.66);
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 
         .login-header {
             display: flex;
             flex-direction: column;
             margin-bottom: 1rem;
+            position: relative;
+
+            .go-home {
+                position: absolute;
+                top: 0rem;
+                left: 0rem;
+
+                .go-home-link {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    text-decoration: none;
+                    color: var(--color-primary);
+                    font-weight: bold;
+                    position: relative;
+                }
+            }
 
             .login-title {
                 text-align: center;
@@ -114,6 +135,16 @@
                         right: 0;
                         text-align: right;
                     }
+
+                    // .forgot-password::after {
+                    //     content: "";
+                    //     position: absolute;
+                    //     // width: 100%;
+                    //     height: 1.5px;
+                    //     background-color: var(--color-info);
+                    //     bottom: -1px;
+                    //     left: 0;
+                    // }
                 }
 
                 button {
@@ -168,19 +199,48 @@
                     text-decoration: none;
                 }
             }
+
+            .sign-in {
+                color: var(--color-primary);
+
+                a {
+                    position: relative;
+                    text-decoration: none;
+                    color: var(--color-primary);
+                }
+
+                a::after {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 1.5px;
+                    background-color: var(--color-primary);
+                    bottom: -1px;
+                    left: 0;
+                }
+            }
         }
     }
 }
 
 @media(max-width:767.98px) {
     .login-wrapper {
-        width: 90%;
+        width: 100%;
         left: 50%;
         transform: translateX(-50%);
+        padding: 1rem;
 
         .login-container {
             width: 100%;
-            padding: 0.5rem 2rem;
+            // padding: 2rem;
+            min-height: calc(100vh - 2rem);
+
+            .login-header {
+                .go-home {
+                    top: -.5rem;
+                    left: -1rem;
+                }
+            }
 
             .login-content {
                 form {
