--- a/src/app/components/clients/shop/shop.component.html
+++ b/src/app/components/clients/shop/shop.component.html
@@ -3,29 +3,29 @@
         <div class="photo-popular-wrapper">
             <h2 class="ppopular-title">100 nhiếp ảnh gia</h2>
             <div class="ppopular-wrapper">
-                <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
+                <div class="ppopular-item" *ngFor="let userdto of userInfoData">
+                    <a [routerLink]="'/profile/' + userdto.user.id" class="ppopular-link">
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16-2.png" alt="">
+                                    <img [src]="'./assets/images/user/' + userdto.userInfo.img1" alt="">
                                 </div>
                                 <div class="picture-right">
                                     <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17-2.png" alt="">
+                                        <img [src]="'./assets/images/user/' + userdto.userInfo.img2" alt="">
                                     </div>
                                     <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18-2.png" alt="">
+                                        <img [src]="'./assets/images/user/' + userdto.userInfo.img3" alt="">
                                     </div>
                                 </div>
                             </div>
                             <div class="pp-info">
                                 <div class="info-left">
-                                    <h4 class="info-title">Phạm Việt Cường</h4>
-                                    <span class="info-address">Ba Đình, Hà Nội</span>
+                                    <h4 class="info-title">{{ userdto.user.full_name }}</h4>
+                                    <span class="info-address">{{ userdto.user.address }}</span>
                                 </div>
                                 <div class="info-right">
-                                    <p class="info-price">300,000/h</p>
+                                    <p class="info-price">{{ userdto.userInfo.cost }}/h</p>
                                     <div class="info-rate">
                                         <div class="rate-star">
                                             <img src="./assets/images/icons/star-fill.png" alt="">
@@ -39,217 +39,11 @@
                                 </div>
                             </div>
                             <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
+                                <img [src]="'./assets/images/avatar/' + userdto.user.avatar" alt="avatar">
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16-1.png" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17-1.png" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18-1.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Lê Đức Chinh</h4>
-                                    <span class="info-address">Tây Hồ, Hà Nội</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">350,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item">
-                    <a routerLink="/profile" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Rectangle 16.png" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Rectangle 17.png" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Rectangle 18.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Dương Tùng Vương</h4>
-                                    <span class="info-address">Quận 1, Hồ Chí Minh</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">500,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Thanh Bình 2.jpg" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Thanh Bình 1.jpg" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Thanh Bình.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Thanh Bùi</h4>
-                                    <span class="info-address">Quận 5, Hồ Chí Minh</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">300,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/user/Thanh Bình 3.jpg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Hy vuông 1.jpg" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Hy vuông 2.jpg" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/HY Vuông.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Hy Vuông</h4>
-                                    <span class="info-address">Quận 7, Hồ Chí Minh</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">600,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/user/Hy vuông 3.jpg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="ppopular-item">
-                    <a routerLink="/profile" class="ppopular-link">
-                        <div class="ppopular-content">
-                            <div class="pp-picture">
-                                <div class="picture-1">
-                                    <img src="./assets/images/user/Tùng lâm 1.jpg" alt="">
-                                </div>
-                                <div class="picture-right">
-                                    <div class="picture-2">
-                                        <img src="./assets/images/user/Tùng lâm 2.jpg" alt="">
-                                    </div>
-                                    <div class="picture-3">
-                                        <img src="./assets/images/user/Tùng lâm 3.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-info">
-                                <div class="info-left">
-                                    <h4 class="info-title">Nguyễn Tùng Lâm</h4>
-                                    <span class="info-address">Sơn Tây, Hà Nội</span>
-                                </div>
-                                <div class="info-right">
-                                    <p class="info-price">400,000/h</p>
-                                    <div class="info-rate">
-                                        <div class="rate-star">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                            <img src="./assets/images/icons/star-fill.png" alt="">
-                                        </div>
-                                        <span class="rate-text">5.0</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pp-avatar">
-                                <img src="./assets/images/user/Tùng lâm 4.jpg" alt="avatar">
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
             </div>
             <div class="ppopular-detail">
                 <a class="ppopular-detail-link" routerLink="">Xem tất cả
