--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -60,7 +60,7 @@
             <h2 class="ppopular-title">Nhiếp ảnh gia phổ biến</h2>
             <div class="ppopular-wrapper">
                 <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
+                    <a routerLink="/profile/1" class="ppopular-link">
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
@@ -101,7 +101,7 @@
                     </a>
                 </div>
                 <div class="ppopular-item ">
-                    <a routerLink="/profile" class="ppopular-link">
+                    <a routerLink="/profile/2" class="ppopular-link">
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
@@ -142,7 +142,7 @@
                     </a>
                 </div>
                 <div class="ppopular-item">
-                    <a routerLink="/profile" class="ppopular-link">
+                    <a routerLink="/profile/3" class="ppopular-link">
                         <div class="ppopular-content">
                             <div class="pp-picture">
                                 <div class="picture-1">
